@@ -70,6 +70,7 @@ The following people and organizations have contributed code to XCSoar:
  Remco Derksen <remco@viperlook.com>
  Eric Gardem <ericcarden72@gmail.com>
  Andreas Lüthi <andreas.luethi@gmx.net>
+ Andres Totorica <andrestotorica@gmail.com>
  Petr Styblo <styblope@gmail.com>
  Stefan Will <stefan.will@gmail.com>
  Winfried Simon <winfried.simon@gmail.com>
